<resources>
    <string name="app_name">FoodVault</string>
    <string name="account_circle_icon">Account circle icon</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t Have an Account?</string>
    <string name="add_product_manually">Add Product Manually:</string>
    <string name="product_name">Product Name</string>
    <string name="quantity">Quantity</string>
    <string name="expiration_date">Expiration Date</string>
    <string name="product_location">Location</string>
    <string name="product_is_expired">Expired</string>
    <string name="scan_product_to_add">Scan Product To Add:</string>
    <string name="camera_icon">Camera icon</string>
    <string name="save_and_add_product_to_inventory">Save and Add Product to Inventory</string>
    <string name="cancel_product_entry">Cancel Product Entry</string>
    <string name="welcome_to_foodvault">Welcome to FoodVault</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register_profile">Register Profile</string>
    <string name="foodvault">FoodVault</string>
    <string name="view_inventory">View Inventory</string>
    <string name="view_shopping_lists">View Shopping Lists</string>
    <string name="view_groups">View Groups</string>
    <string name="empty_string"></string>
    <string name="category">Category</string>
    <string name="inventory">Inventory</string>
    <string name="add_new_location">Add New Location</string>
    <string name="filter_items">Filter Items</string>
    <string name="add_new_item">Add New Item</string>
    <string-array name="categories">
        <item>Dairy</item>
        <item>Vegetables</item>
        <item>Other</item>
    </string-array>
    <string name="spinner_prompt">Group products in list by:</string>
    <string name="settings">Settings</string>
    <string name="set_expiration_period_for_reminder">Set Expiration Period for Reminder</string>
    <string name="log_out">Log out</string>
    <string name="select_how_many_days_in_advance_you_would_like_the_app_to_remind_you_before_a_product_reaches_it_s_expiration_date">Select how many days in advance you would like the app to remind you before a product reaches it\'s expiration date:</string>
    <string name="set_to_30_days_before">Set to 30 days before</string>
    <string name="save_settings">Save Settings</string>
    <string name="cancel_edited_settings">Cancel Edited Settings</string>
    <string name="shopping_lists">Shopping Lists</string>
    <string name="scrollview_for_shopping_lists">Scrollview for Shopping Lists</string>
    <string name="edit_shopping_list">Edit Shopping List</string>
    <string name="remove_shopping_list">Remove Shopping List</string>
    <string name="add_new_shopping_list">Add New Shopping List</string>
    <string name="enter_an_expiration_date">Enter an expiration date</string>
    <string name="quantity_0">Quantity : 0</string>
    <string name="edit_product">Edit Product</string>
    <string name="enter_category">Enter Category</string>
    <string name="cancel_edit">Cancel Edit</string>
    <string name="enter_location">Enter Location</string>
    <string name="save_and_update_product">Save and Update Product</string>
    <string name="update_item">Update Item</string>
    <string name="quantity_to_buy_0">Quantity To Buy: 0</string>
    <string name="itembought">Is Item Purchased?</string>
    <string name="grocerystore">GroceryStore: </string>
    <string name="yes">YES</string>
    <string name="add_item">Add Item</string>
    <string name="shoppingproduct_name">Product Name</string>
    <string name="add_another_item_in_list">Add another item in list</string>
    <string name="share_shopping_list">Share shopping list</string>
    <string name="delete_item_in_list">Delete item in list</string>
    <string name="qty">Qty</string>
    <string name="profile_icon">Profile Icon</string>
    <string name="settings_icon">Settings Icon</string>
    <string name="notification_icon">Notification Icon</string>
    <string name="name_surname">Name_Surname</string>
    <string name="_0">0</string>
    <string name="groups">Groups</string>
    <string name="update_profile">Update Profile</string>
    <string name="notifications">Notifications</string>
    <string name="delete_records">Delete Records</string>
    <string name="group_by">Group By</string>
    <string name="change_password_optional">Change Password (optional)</string>
    <string name="save_updated_information">Save Updated Information</string>
    <string name="cancel_profile_updates">Cancel Profile Updates</string>
    <string name="update_locations">Update Locations</string>
    <string name="group">Group</string>
    <string name="add_member_to_group">Add Member to Group</string>
    <string name="remove_member">Remove Member</string>
    <string name="create_group">Create Group</string>
    <string name="group_name">Group Name</string>
    <string name="add_members_to_group">Add Members to Group</string>
    <string name="save_new_group">Save New Group</string>
    <string name="cancel_entry">Cancel Entry</string>
    <string name="new_shopping_list">New Shopping List</string>
    <string name="shopping_list_name">Shopping List Name</string>
    <string name="save_shopping_list">Save Shopping List</string>
    <string name="shopping_list">Shopping List</string>
    <string name="scrollview_for_groups">Scrollview for Groups</string>
    <string name="add_new_group">Add New Group</string>
    <string name="edit_group">Edit Group</string>
    <string name="remove_group">Remove Group</string>
    <string name="add_product">Add Product</string>
    <string name="delete_product">Delete Product</string>
    <string name="group_by_category">Group by Category</string>
    <string name="group_by_shop">Group by Shop</string>
    <string name="edit">Edit</string>
    <string name="product">Product</string>
    <string name="return_to_view_shopping_lists">Return to View Shopping Lists</string>
    <string name="group_by_or_sort">Group By or Sort</string>
    <string name="sort_items_ascending">Sort Items Ascending</string>
    <string name="sort_items_descending">Sort Items Descending</string>
    <string name="home_button">Home Button</string>
    <string name="blue_puddle">Blue Puddle</string>
    <string name="lemon">Lemon</string>
    <string name="peach_puddle">Peach Puddle</string>
    <string name="cancel_product_edit">Cancel Product Edit</string>
    <string name="enter_grocery_store">Enter Grocery Store</string>
    <string name="user_code">User Code</string>
    <string-array name="spinner_options">
        <item>Item Category</item>
        <item>Grocery Store</item>
        <item>Both</item>
    </string-array>
    <string name="user_code">User Code</string>
</resources>