<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/screen_background"
    tools:context=".RegisterProfileActivity">

    <TextView
        android:layout_width="270dp"
        android:layout_height="118dp"
        android:layout_marginTop="150dp"
        android:ellipsize="end"
        android:gravity="center"
        android:maxLines="2"
        android:text="@string/welcome_to_foodvault"
        android:textAllCaps="true"
        android:textColor="#050C57"
        android:textSize="40sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/first_name_input"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:background="@drawable/rounded_corner"
        android:hint="@string/first_name"
        android:inputType="text"
        android:padding="16dp"
        android:textColor="#3949AB"
        android:textColorHint="#3949AB"
        android:textSize="20sp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/last_name_input"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:background="@drawable/rounded_corner"
        android:hint="@string/last_name"
        android:inputType="text"
        android:padding="16dp"
        android:textColor="#3949AB"
        android:textColorHint="#3949AB"
        android:textSize="20sp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/email_address_input"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:hint="@string/email_address"
        android:textColor="#3949AB"
        android:textColorHint="#3949AB"
        android:textSize="20sp"
        android:background="@drawable/rounded_corner"
        android:padding="16dp"
        android:inputType="textEmailAddress"
        android:autofillHints="" />

    <EditText
        android:id="@+id/password_input"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:hint="@string/password"
        android:textColor="#3949AB"
        android:textColorHint="#3949AB"
        android:textSize="20sp"
        android:background="@drawable/rounded_corner"
        android:padding="16dp"
        android:inputType="textPassword"
        android:autofillHints="" />

    <EditText
        android:id="@+id/confirm_password_input"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:hint="@string/confirm_password"
        android:textColor="#3949AB"
        android:textColorHint="#3949AB"
        android:textSize="20sp"
        android:background="@drawable/rounded_corner"
        android:padding="16dp"
        android:inputType="textPassword"
        android:autofillHints="" />

    <Button
        android:id="@+id/register_profile_btn"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:backgroundTint="#70B1BA"
        android:padding="18dp"
        android:text="@string/register_profile"
        android:textColor="#311B92"
        android:textSize="20sp" />


</LinearLayout>