<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    android:background="@drawable/screen_background"
    android:gravity="center"
    android:padding="16dp"

    tools:context=".AddProductActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_product_manually"
            android:textAllCaps="true"
            android:textColor="#050C57"
            android:textSize="25sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/product_name_input"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:autofillHints=""
            android:background="@drawable/rounded_corner"
            android:gravity="center_horizontal"
            android:hint="@string/product_name"
            android:inputType="text"
            android:padding="14dp"
            android:textColor="#3949AB"
            android:textColorHint="#3949AB"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center_horizontal"
            android:text="@string/quantity"
            android:textColor="#3949AB"
            android:textSize="15sp" />

        <NumberPicker
            android:id="@+id/number_picker_quantity"
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:gravity="center_horizontal" />

        <EditText
            android:id="@+id/expiration_date_input"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/rounded_corner"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_horizontal"
            android:hint="@string/expiration_date"
            android:inputType="datetime"
            android:padding="14dp"
            android:textColor="#3949AB"
            android:textColorHint="#3949AB"
            android:textSize="15sp"
            android:autofillHints="" />

        <AutoCompleteTextView
            android:id="@+id/category_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="@string/enter_category"
            android:minHeight="48dp"
            android:text="@string/empty_string"
            android:textColor="#000000"
            android:textColorHint="#A8A8A8"
            tools:ignore="VisualLintTextFieldSize" />

        <AutoCompleteTextView
            android:id="@+id/location_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="@string/enter_location"
            android:minHeight="48dp"
            android:text="@string/empty_string"
            android:textColor="#000000"
            android:textColorHint="#A8A8A8"
            tools:ignore="VisualLintTextFieldSize" />

        <!--<Spinner
            android:id="@+id/spinner_category"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center_horizontal"
            android:background="@android:drawable/btn_dropdown"
            android:padding="14dp"
            android:textAlignment="center"
            android:textColor="#3949AB"
            android:textColorHint="#3949AB"
            android:textSize="15sp" />-->

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_add"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/save_and_add_product_to_inventory"
                android:textColor="#311B92"
                android:backgroundTint="#70B1BA"
                android:layout_marginTop="10dp"
                android:onClick="onAddProductClicked" />

            <Button
                android:id="@+id/btn_cancel_product"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:backgroundTint="#70B1BA"
                android:text="@string/cancel_product_entry"
                android:textColor="#311B92"
                android:onClick="onCancelProductClicked" />

        </LinearLayout>


    </LinearLayout>

</RelativeLayout>