<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewGroupActivity">

    <ImageView
        android:id="@+id/img_lemon_puddle2"
        android:layout_width="107dp"
        android:layout_height="92dp"
        android:layout_marginStart="68dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/lemon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/img_blue_puddle3"
        app:srcCompat="@drawable/lemon"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/img_blue_puddle3"
        android:layout_width="262dp"
        android:layout_height="154dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="200dp"
        android:contentDescription="@string/blue_puddle"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout9"
        app:srcCompat="@drawable/blue_puddle"
        tools:ignore="VisualLintBounds,ImageContrastCheck" />

    <ImageView
        android:id="@+id/img_peach_puddle3"
        android:layout_width="257dp"
        android:layout_height="165dp"
        android:layout_marginStart="180dp"
        android:layout_marginBottom="36dp"
        android:contentDescription="@string/peach_puddle"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="@+id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/peach_puddle"
        tools:ignore="VisualLintBounds,ImageContrastCheck" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/shrikhand"
        android:gravity="center"
        android:shadowColor="#214069"
        android:text="@string/create_group"
        android:textColor="#050C57"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@+id/group_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.657" />

    <LinearLayout
        android:id="@+id/group_container"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/inventory_border"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.463"
        tools:layout_editor_absoluteX="16dp">
        <!-- This container will hold dynamically added items -->

    </LinearLayout>

    <Button
        android:id="@+id/btn_add_members_to_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/group_container"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="#70B1BA"
        android:onClick="onAddMembersToGroupClicked"
        android:text="@string/add_members_to_group"
        android:textColor="#311B92"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/group_container" />

    <LinearLayout
        android:id="@+id/linearLayout9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_add_members_to_group"
        app:layout_constraintVertical_bias="0.167"
        tools:layout_editor_absoluteX="16dp">

        <Button
            android:id="@+id/btn_save_new_group"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:backgroundTint="#70B1BA"
            android:onClick="onSaveNewGroupClicked"
            android:text="@string/save_new_group"
            android:textColor="#311B92" />

        <Button
            android:id="@+id/btn_cancel_group_entry"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#70B1BA"
            android:onClick="onCancelNewGroupClicked"
            android:text="@string/cancel_entry"
            android:textColor="#311B92" />

    </LinearLayout>

    <EditText
        android:id="@+id/groupName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:hint="@string/group_name"
        android:inputType="text"
        android:minHeight="48dp"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/group_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

</androidx.constraintlayout.widget.ConstraintLayout>