<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".DashboardActivity">

    <ImageButton
        android:id="@+id/profile_icon"
        android:layout_width="63dp"
        android:layout_height="55dp"
        android:layout_marginStart="30dp"
        android:contentDescription="@string/profile_icon"
        android:onClick="onProfileIconClicked"
        android:src="@drawable/person_icon"
        app:layout_constraintBottom_toTopOf="@+id/textView18"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btn_settings_icon"
        android:layout_width="63dp"
        android:layout_height="55dp"
        android:layout_marginEnd="30dp"
        android:contentDescription="@string/settings_icon"
        android:onClick="onSettingsIconClicked"
        android:src="@drawable/settings_icon"
        app:layout_constraintBottom_toTopOf="@+id/textView18"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:ellipsize="end"
        android:fontFamily="@font/shrikhand"
        android:gravity="center"
        android:maxLines="2"
        android:shadowColor="#214069"
        android:text="@string/foodvault"
        android:textColor="#050C57"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/view_inventory_btn"
        android:layout_width="250dp"
        android:layout_height="120dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="60dp"
        android:backgroundTint="#70B1BA"
        android:onClick="onViewInventoryClicked"
        android:padding="18dp"
        android:text="@string/view_inventory"
        android:textColor="#311B92"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView18" />

    <Button
        android:id="@+id/view_shoplist_btn"
        android:layout_width="250dp"
        android:layout_height="120dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="60dp"
        android:backgroundTint="#70B1BA"
        android:onClick="onViewShopListClicked"
        android:padding="18dp"
        android:text="@string/view_shopping_lists"
        android:textColor="#311B92"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_inventory_btn" />

    <Button
        android:id="@+id/view_groups_btn"
        android:layout_width="250dp"
        android:layout_height="120dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="60dp"
        android:backgroundTint="#70B1BA"
        android:onClick="onViewGroupsClicked"
        android:padding="18dp"
        android:text="@string/view_groups"
        android:textColor="#311B92"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_shoplist_btn" />


</androidx.constraintlayout.widget.ConstraintLayout>