<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/screen_background"
    android:gravity="center"
    tools:context=".SettingsActivity">

    <LinearLayout
        android:id="@+id/linear_layout_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="120dp"
            android:ellipsize="end"
            android:gravity="center"
            android:text="@string/settings"
            android:fontFamily="@font/shrikhand"
            android:shadowColor="#214069"
            android:textColor="#050C57"
            android:textSize="40sp" />

        <Button
            android:id="@+id/btn_expire_period"
            android:layout_width="300dp"
            android:layout_height="120dp"
            android:layout_marginTop="30dp"
            android:backgroundTint="#70B1BA"
            android:onClick="onExpirationReminderClicked"
            android:padding="18dp"
            android:text="@string/set_expiration_period_for_reminder"
            android:textColor="#311B92"
            android:textSize="20sp"
            tools:ignore="TextSizeCheck" />

        <Button
            android:id="@+id/logout_btn"
            android:layout_width="300dp"
            android:layout_height="120dp"
            android:layout_marginTop="30dp"
            android:backgroundTint="#70B1BA"
            android:padding="18dp"
            android:text="@string/log_out"
            android:textColor="#311B92"
            android:textSize="20sp"
            android:onClick="onLogOutClicked" />

    </LinearLayout>

</RelativeLayout>